--- a/frontend/src/app/pages/property-compare/property-compare.page.html
+++ b/frontend/src/app/pages/property-compare/property-compare.page.html
@@ -1,11 +1,5 @@
-<app-layout class="min-h-screen flex flex-col">
-  <button
-    class="m-3 mt-4 px-4 py-2 bg-customGreen text-white rounded"
-    (click)="goToAllProperties()"
-  >
-    Volver
-  </button>
-  <!-- Condición para mostrar la tabla solo si hay propiedades en la lista de comparación -->
+<div class="p-4 overflow-auto max-w-full max-h-[calc(100vh-4rem)]">  
+<!-- Condición para mostrar la tabla solo si hay propiedades en la lista de comparación -->
   <div *ngIf="compareList().length > 0; else noCompareMessage" class="overflow-auto max-w-full max-h-[calc(100vh-4rem)]">
     <app-compare-table [itemList]="this.compareList()"></app-compare-table>
   </div>
@@ -16,4 +10,4 @@
       No hay propiedades seleccionadas para comparar.
     </div>
   </ng-template>
-</app-layout>
+</div>
