--- a/frontend/src/app/pages/users/users.page.html
+++ b/frontend/src/app/pages/users/users.page.html
@@ -1,187 +1,195 @@
 <!-- Dejamos el espacio que ocupa el header y el footer para que el contenido se ajuste a la pantalla -->
 <div class="p-5"></div>
-<ion-content class="ion-padding ion-margin-top">
-      <ion-button class="ion-align-items-center ion-margin-top mt-4 px-4 py-2 rounded" expand="full" (click)="goToAdminPanel()" color="tertiary">
-        Volver al panel de administración
-      </ion-button>
 
-      <div class="ion-margin-top">
-        <ion-grid>
-          <ion-row>
-            <ion-col>
-              <h3 class="text-lg font-semibold">
-                Lista de Usuarios
-              </h3>
-            </ion-col>
-            <ion-col class="ion-text-end">
-                <ion-button fill="outline" (click)="createUser()">
-                  <ion-ripple-effect></ion-ripple-effect>
-                  <svg
-                    xmlns="http://www.w3.org/2000/svg"
-                    viewBox="0 0 24 24"
-                    fill="currentColor"
-                    aria-hidden="true"
-                    stroke-width="2"
-                    class="w-4 h-4"
-                  >
-                    <path
-                      d="M6.25 6.375a4.125 4.125 0 118.25 0 4.125 4.125 0 01-8.25 0zM3.25 19.125a7.125 7.125 0 0114.25 0v.003l-.001.119a.75.75 0 01-.363.63 13.067 13.067 0 01-6.761 1.873c-2.472 0-4.786-.684-6.76-1.873a.75.75 0 01-.364-.63l-.001-.122zM19.75 7.5a.75.75 0 00-1.5 0v2.25H16a.75.75 0 000 1.5h2.25v2.25a.75.75 0 001.5 0v-2.25H22a.75.75 0 000-1.5h-2.25V7.5z"
-                    ></path>
-                  </svg>
-                  Crear usuario
-                </ion-button>
-            </ion-col>
-          </ion-row>
-        </ion-grid>
-      </div>
+<ion-button
+  class="ion-align-items-center ion-margin-top mt-4 px-4 py-2 rounded"
+  expand="full"
+  (click)="goToAdminPanel()"
+  color="tertiary"
+>
+  Volver al panel de administración
+</ion-button>
 
-      <ion-grid>
-        <ion-row class="ion-justify-content-between">
-          <ion-col size="1">
-            <p
-              class="flex items-center justify-between gap-2 font-sans text-sm font-normal leading-none"
-            >
-              ID
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                fill="none"
-                viewBox="0 0 24 24"
-                stroke-width="2"
-                stroke="currentColor"
-                aria-hidden="true"
-                class="w-4 h-4"
-              >
-                <path
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                  d="M8.25 15L12 18.75 15.75 15m-7.5-6L12 5.25 15.75 9"
-                ></path>
-              </svg>
-            </p>
-          </ion-col>
-          <ion-col size="2">
-            <p
-              class="flex items-center justify-between gap-2 font-sans text-sm font-normal leading-none"
-            >
-              Usuario
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                fill="none"
-                viewBox="0 0 24 24"
-                stroke-width="2"
-                stroke="currentColor"
-                aria-hidden="true"
-                class="w-4 h-4"
-              >
-                <path
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                  d="M8.25 15L12 18.75 15.75 15m-7.5-6L12 5.25 15.75 9"
-                ></path>
-              </svg>
-            </p>
-          </ion-col>
-          <ion-col size="3">
-            <p
-              class="flex items-center justify-between gap-2 font-sans text-sm font-normal leading-none"
-            >
-              Email
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                fill="none"
-                viewBox="0 0 24 24"
-                stroke-width="2"
-                stroke="currentColor"
-                aria-hidden="true"
-                class="w-4 h-4"
-              >
-                <path
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                  d="M8.25 15L12 18.75 15.75 15m-7.5-6L12 5.25 15.75 9"
-                ></path>
-              </svg>
-            </p>
-          </ion-col>
-          <ion-col size="1">
-            <p
-              class="flex items-center justify-between gap-2 font-sans text-sm font-normal leading-none"
-            >
-              Rol
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                fill="none"
-                viewBox="0 0 24 24"
-                stroke-width="2"
-                stroke="currentColor"
-                aria-hidden="true"
-                class="w-4 h-4"
-              >
-                <path
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                  d="M8.25 15L12 18.75 15.75 15m-7.5-6L12 5.25 15.75 9"
-                ></path>
-              </svg>
-            </p>
-          </ion-col>
-          <ion-col size="2">
-            <p
-              class="flex items-center justify-between gap-2 font-sans text-sm font-normal leading-none"
-            >
-              Fecha de registro
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                fill="none"
-                viewBox="0 0 24 24"
-                stroke-width="2"
-                stroke="currentColor"
-                aria-hidden="true"
-                class="w-4 h-4"
-              >
-                <path
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                  d="M8.25 15L12 18.75 15.75 15m-7.5-6L12 5.25 15.75 9"
-                ></path>
-              </svg>
-            </p>
-          </ion-col>
-          <ion-col size="2"></ion-col>
-        </ion-row>
+<div class="ion-margin-top">
+  <ion-grid>
+    <ion-row>
+      <ion-col>
+        <h3 class="text-lg font-semibold">Lista de Usuarios</h3>
+      </ion-col>
+      <ion-col class="ion-text-end">
+        <ion-button fill="outline" (click)="createUser()">
+          <ion-ripple-effect></ion-ripple-effect>
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            viewBox="0 0 24 24"
+            fill="currentColor"
+            aria-hidden="true"
+            stroke-width="2"
+            class="w-4 h-4"
+          >
+            <path
+              d="M6.25 6.375a4.125 4.125 0 118.25 0 4.125 4.125 0 01-8.25 0zM3.25 19.125a7.125 7.125 0 0114.25 0v.003l-.001.119a.75.75 0 01-.363.63 13.067 13.067 0 01-6.761 1.873c-2.472 0-4.786-.684-6.76-1.873a.75.75 0 01-.364-.63l-.001-.122zM19.75 7.5a.75.75 0 00-1.5 0v2.25H16a.75.75 0 000 1.5h2.25v2.25a.75.75 0 001.5 0v-2.25H22a.75.75 0 000-1.5h-2.25V7.5z"
+            ></path>
+          </svg>
+          Crear usuario
+        </ion-button>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
+</div>
 
-        <ion-row *ngFor="let user of userList" class="ion-justify-content-between">
-          <ion-col size="1">
-            <p>{{ user.id }}</p>
-          </ion-col>
-          <ion-col size="2">
-            <p>{{ user.name }} {{ user.lastname }}</p>
-          </ion-col>
-          <ion-col size="3">
-            <p>{{ user.email }}</p>
-          </ion-col>
-          <ion-col size="1">
-            <!--Si el usuario es administrador, lo mostramos como un botón con fondo verde-->
-            @if(user.role === 'admin'){
-              <ion-button fill="outline" color="success">
-                {{ user.role }}
-              </ion-button>
-            } @else {
-              <ion-button fill="outline" color="tertiary">
-                {{ user.role }}
-              </ion-button>
-            }
-          </ion-col>
-          <ion-col size="2">
-            <p>{{ this.formatRegistrationDate(user.registration_date) }}</p>
-          </ion-col>
-          <ion-col size="2">
-            <ion-button fill="outline" color="primary" (click)="editUser(user.id)">Editar</ion-button>
-            <ion-button fill="outline" color="danger" (click)="openDeleteTab(user.id.toString())">Borrar</ion-button>
-          </ion-col>
-        </ion-row>
-      </ion-grid>
+<ion-grid>
+  <ion-row class="ion-justify-content-between">
+    <ion-col size="1">
+      <p
+        class="flex items-center justify-between gap-2 font-sans text-sm font-normal leading-none"
+      >
+        ID
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          fill="none"
+          viewBox="0 0 24 24"
+          stroke-width="2"
+          stroke="currentColor"
+          aria-hidden="true"
+          class="w-4 h-4"
+        >
+          <path
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            d="M8.25 15L12 18.75 15.75 15m-7.5-6L12 5.25 15.75 9"
+          ></path>
+        </svg>
+      </p>
+    </ion-col>
+    <ion-col size="2">
+      <p
+        class="flex items-center justify-between gap-2 font-sans text-sm font-normal leading-none"
+      >
+        Usuario
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          fill="none"
+          viewBox="0 0 24 24"
+          stroke-width="2"
+          stroke="currentColor"
+          aria-hidden="true"
+          class="w-4 h-4"
+        >
+          <path
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            d="M8.25 15L12 18.75 15.75 15m-7.5-6L12 5.25 15.75 9"
+          ></path>
+        </svg>
+      </p>
+    </ion-col>
+    <ion-col size="3">
+      <p
+        class="flex items-center justify-between gap-2 font-sans text-sm font-normal leading-none"
+      >
+        Email
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          fill="none"
+          viewBox="0 0 24 24"
+          stroke-width="2"
+          stroke="currentColor"
+          aria-hidden="true"
+          class="w-4 h-4"
+        >
+          <path
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            d="M8.25 15L12 18.75 15.75 15m-7.5-6L12 5.25 15.75 9"
+          ></path>
+        </svg>
+      </p>
+    </ion-col>
+    <ion-col size="1">
+      <p
+        class="flex items-center justify-between gap-2 font-sans text-sm font-normal leading-none"
+      >
+        Rol
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          fill="none"
+          viewBox="0 0 24 24"
+          stroke-width="2"
+          stroke="currentColor"
+          aria-hidden="true"
+          class="w-4 h-4"
+        >
+          <path
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            d="M8.25 15L12 18.75 15.75 15m-7.5-6L12 5.25 15.75 9"
+          ></path>
+        </svg>
+      </p>
+    </ion-col>
+    <ion-col size="2">
+      <p
+        class="flex items-center justify-between gap-2 font-sans text-sm font-normal leading-none"
+      >
+        Fecha de registro
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          fill="none"
+          viewBox="0 0 24 24"
+          stroke-width="2"
+          stroke="currentColor"
+          aria-hidden="true"
+          class="w-4 h-4"
+        >
+          <path
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            d="M8.25 15L12 18.75 15.75 15m-7.5-6L12 5.25 15.75 9"
+          ></path>
+        </svg>
+      </p>
+    </ion-col>
+    <ion-col size="2"></ion-col>
+  </ion-row>
 
-      <app-confirmation-tab *ngIf="showConfirmationTab" (confirmed)="confirmDelete()" (canceled)="showConfirmationTab = false"></app-confirmation-tab>
-    </ion-content>
-<app-layout></app-layout>
+  <ion-row *ngFor="let user of userList" class="ion-justify-content-between">
+    <ion-col size="1">
+      <p>{{ user.id }}</p>
+    </ion-col>
+    <ion-col size="2">
+      <p>{{ user.name }} {{ user.lastname }}</p>
+    </ion-col>
+    <ion-col size="3">
+      <p>{{ user.email }}</p>
+    </ion-col>
+    <ion-col size="1">
+      <!--Si el usuario es administrador, lo mostramos como un botón con fondo verde-->
+      @if(user.role === 'admin'){
+      <ion-button fill="outline" color="success"> {{ user.role }} </ion-button>
+      } @else {
+      <ion-button fill="outline" color="tertiary"> {{ user.role }} </ion-button>
+      }
+    </ion-col>
+    <ion-col size="2">
+      <p>{{ this.formatRegistrationDate(user.registration_date) }}</p>
+    </ion-col>
+    <ion-col size="2">
+      <ion-button fill="outline" color="primary" (click)="editUser(user.id)"
+        >Editar</ion-button
+      >
+      <ion-button
+        fill="outline"
+        color="danger"
+        (click)="openDeleteTab(user.id.toString())"
+        >Borrar</ion-button
+      >
+    </ion-col>
+  </ion-row>
+</ion-grid>
+
+<app-confirmation-tab
+  *ngIf="showConfirmationTab"
+  (confirmed)="confirmDelete()"
+  (canceled)="showConfirmationTab = false"
+></app-confirmation-tab>
