--- a/frontend/src/app/components/compare-table/compare-table.component.html
+++ b/frontend/src/app/components/compare-table/compare-table.component.html
@@ -1,88 +1,65 @@
-<ion-grid class="max-w-screen-md ml-4 mb-5">
-  <!-- Fila de encabezado de la tabla -->
-  <ion-row class="font-semibold text-sm text-left border-b">
-    <ion-col size="3" class="px-4 py-2 border-r">Propiedad</ion-col>
-    <ion-col size="2" class="px-4 py-2 border-r">Precio</ion-col>
-    <ion-col size="2" class="px-4 py-2 border-r">Ubicación</ion-col>
-    <ion-col size="2" class="px-4 py-2 border-r">Habitaciones</ion-col>
-    <ion-col size="2" class="px-4 py-2">Baños</ion-col>
-  </ion-row>
-
-  <!-- Fila de datos de las propiedades -->
-  <ion-row *ngFor="let compareItem of itemList" class="border-b">
-    <ion-col size="3" class="px-4 py-2 text-sm">
-      <!-- Imagen de la propiedad (si disponible) -->
-      <ion-img
-        [src]="compareItem.property.img_url"
-        class="property-img"
-      ></ion-img>
-      {{ compareItem.property.title }}
-    </ion-col>
-    <ion-col size="2" class="px-4 py-2 text-sm"
-      >${{ compareItem.property.price }}</ion-col
+<ion-grid class="max-w-screen-md">
+  <ion-row class="justify-center">
+    <!-- Tarjetas de propiedades -->
+    <ion-col
+      size="12"
+      size-md="6"
+      *ngFor="let compareItem of itemList; let i = index"
+      class="p-0"
     >
-    <ion-col size="2" class="px-4 py-2 text-sm">{{
-      compareItem.property.location
-    }}</ion-col>
-    <ion-col size="2" class="px-4 py-2 text-sm">{{
-      compareItem.property.number_of_rooms
-    }}</ion-col>
-    <ion-col size="2" class="px-4 py-2 text-sm">{{
-      compareItem.property.number_of_bathrooms
-    }}</ion-col>
-
-    <!-- Botones de acción (Eliminar, Detalles, Favoritos) -->
-    <ion-col size="1" class="px-4 py-2 text-sm">
-      <ion-button
-        fill="clear"
-        color="danger"
-        (click)="removeProperty(compareItem)"
-      >
-        <ion-icon name="trash"></ion-icon>
-      </ion-button>
-      <ion-button
-        fill="clear"
-        color="primary"
-        (click)="viewDetails(compareItem)"
-      >
-        <ion-icon name="eye"></ion-icon>
-      </ion-button>
+      <ion-card class="h-full w-full max-w-xs m-0">
+        <ion-card-header>
+          <div class="absolute top-4 left-0 right-0 flex justify-between px-4">
+            <button
+              class=" bg-opacity-50 text-amber-400 rounded-full p-2"
+              (click)="toggleFavorite(compareItem.property)"
+            >
+              <ion-icon
+                [name]="
+                  isFavorite(compareItem.property) ? 'star' : 'star-outline'
+                "
+                class="text-2xl"
+              ></ion-icon>
+            </button>
+          </div>
+          <ion-img
+            [src]="compareItem.property.img_url"
+            class="h-24 w-full object-cover"
+          ></ion-img>
+          <ion-card-title class="text-base font-semibold">{{
+            compareItem.property.title
+          }}</ion-card-title>
+        </ion-card-header>
+        <ion-card-content class="text-sm">
+          <p><strong>Precio:</strong> ${{ compareItem.property.price }}</p>
+          <p><strong>Ubicación:</strong> {{ compareItem.property.location }}</p>
+          <p>
+            <strong>Habitaciones:</strong>
+            {{ compareItem.property.number_of_rooms }}
+          </p>
+          <p>
+            <strong>Baños:</strong>
+            {{ compareItem.property.number_of_bathrooms }}
+          </p>
+          <!-- Botones de acción en las tarjetas -->
+          <ion-button
+            fill="clear"
+            color="danger"
+            (click)="removeProperty(compareItem)"
+            class="text-sm"
+          >
+            <ion-icon name="trash"></ion-icon>
+          </ion-button>
+          <ion-button
+            fill="clear"
+            color="primary"
+            (click)="viewDetails(compareItem)"
+            class="text-sm"
+          >
+            <ion-icon name="eye"></ion-icon>
+          </ion-button>
+        </ion-card-content>
+      </ion-card>
     </ion-col>
   </ion-row>
 </ion-grid>
-
-<!-- Si el número de propiedades es bajo, mostrar tarjetas con diseño de lista -->
-<ion-list *ngIf="itemList.length < 3">
-  <ion-card *ngFor="let compareItem of itemList" class="property-card">
-    <ion-card-header>
-      <ion-img [src]="compareItem.property.img_url"></ion-img>
-      <ion-card-title>{{ compareItem.property.title }}</ion-card-title>
-    </ion-card-header>
-    <ion-card-content>
-      <p><strong>Precio:</strong> ${{ compareItem.property.price }}</p>
-      <p><strong>Ubicación:</strong> {{ compareItem.property.location }}</p>
-      <p>
-        <strong>Habitaciones:</strong>
-        {{ compareItem.property.number_of_rooms }}
-      </p>
-      <p>
-        <strong>Baños:</strong> {{ compareItem.property.number_of_bathrooms }}
-      </p>
-      <!-- Botones de acción en las tarjetas -->
-      <ion-button
-        expand="block"
-        color="danger"
-        (click)="removeProperty(compareItem)"
-      >
-        Eliminar
-      </ion-button>
-      <ion-button
-        expand="block"
-        color="primary"
-        (click)="viewDetails(compareItem)"
-      >
-        Ver Detalles
-      </ion-button>
-    </ion-card-content>
-  </ion-card>
-</ion-list>
