--- a/frontend/src/app/components/properties-table/properties-table.component.html
+++ b/frontend/src/app/components/properties-table/properties-table.component.html
@@ -12,9 +12,11 @@
   <ion-row 
     *ngFor="let property of propertiesList()"
     class="text-center border-b hover:bg-gray-50 items-center">
-    <ion-col size="3" class="px-2 py-2 text-xs flex items-center">
-      <ion-img [src]="property.img_url" class="w-16 h-16 rounded mr-2"></ion-img>
-      <div>{{ property.title }}</div>
+    <ion-col size="3" class="px-2 py-2 text-xs">
+      <div class="flex flex-col">
+        <span> ID: {{ property.id }}</span> 
+        <span>{{ property.title }}</span>
+      </div>
     </ion-col>
     <ion-col size="2" class="px-2 py-2 text-xs">${{ property.price }}</ion-col>
     <ion-col size="2" class="px-2 py-2 text-xs">{{ property.location }}</ion-col>
