--- a/frontend/src/app/pages/admin-panel/admin-panel.page.html
+++ b/frontend/src/app/pages/admin-panel/admin-panel.page.html
@@ -1,33 +1,30 @@
-
-  <!-- Contenedor principal -->
-  <div class="flex justify-center items-center min-h-screen py-8">
-    <!-- Botones centrados -->
-    <button
-      class="flex items-center justify-center w-48 h-48 bg-purple-500 text-white rounded-xl shadow-lg transform hover:scale-105 transition-transform duration-300 mx-4"
-      (click)="goToUserList()"
+<!-- Contenedor principal -->
+<div
+  class="flex flex-col md:flex-row justify-center items-center min-h-screen"
+>
+  <!-- Botones centrados -->
+  <ion-button
+    expand="block"
+    color="tertiary"
+    class="w-64 h-64 lg:w-80 lg:h-80 text-white rounded-xl shadow-lg transform hover:scale-105 transition-transform duration-300 mx-4 mb-4 md:mb-0"
+    (click)="goToUserList()"
     >
-      <ion-icon name="person" class="text-4xl mr-2"></ion-icon>
-      <span class="text-lg">Lista de usuarios</span>
-    </button>
+    <ion-icon slot="start" name="person" class="text-4xl mr-2"></ion-icon>
+    <span class="text-lg">Administrar usuarios</span>
+    </ion-button>
 
-    <button
-      class="flex items-center justify-center w-48 h-48 bg-purple-500 text-white rounded-xl shadow-lg transform hover:scale-105 transition-transform duration-300 mx-4 p-4"
-      (click)="goToPropertyList()"
-    >
-      <ion-icon name="home" class="text-4xl"></ion-icon>
-      <span class="text-lg">Lista de propiedades</span>
-    </button>
-
-    <button
-      class="flex items-center justify-center w-48 h-48 bg-purple-500 text-white rounded-xl shadow-lg transform hover:scale-105 transition-transform duration-300 mx-4 p-4"
-      (click)="goToPropertyListAdmin()"
-    >
-      <div class="flex items-center space-x-1 text-3xl">
-        <ion-icon name="home" ></ion-icon>
-        <ion-icon name="cog" ></ion-icon>
+    <ion-button
+    expand="block"
+    color="tertiary"
+    class="w-64 h-64 lg:w-80 lg:h-80 text-white rounded-xl shadow-lg transform hover:scale-105 transition-transform duration-300 mx-4 mb-4 md:mb-0"
+    (click)="goToPropertyListAdmin()"
+  >
+    <div class="flex flex-col items-center">
+      <div class="flex">
+        <ion-icon slot="start" name="home" class="text-3xl mr-1"></ion-icon>
+        <ion-icon slot="start" name="cog" class="text-3xl mr-1"></ion-icon>
       </div>
-      <span class="text-lg ml-1">Propiedades Administradas</span>
-    </button>
-  
-  </div>
-
+      <span class="text-sm mt-2">Administrar propiedades</span>
+    </div>
+  </ion-button>
+</div>
