--- a/frontend/src/app/pages/home/home.page.html
+++ b/frontend/src/app/pages/home/home.page.html
@@ -1,73 +1,171 @@
-<div class="p-5"></div>
-  <main
-    class="container mx-auto px-4 mt-10 text-center"
-  >
-    <section>
-      <h2 class="text-3xl font-semibold text-gray-700 mb-6">
-        Tu mejor opción para encontrar alquileres
-      </h2>
-      <p class="text-gray-600 mb-8 max-w-2xl mx-auto">
-        RentMatch te ayuda a encontrar la propiedad ideal para alquilar, desde
-        apartamentos en Montevideo hasta casas en la playa. Explora las opciones
-        en nuestra plataforma y encuentra el lugar perfecto para ti.
-      </p>
-
-      <div
-        class="flex flex-col sm:flex-row justify-center space-y-4 sm:space-y-0 sm:space-x-4 m-3 mt-4"
-      >
-        <button
-          class="px-6 py-3 bg-gradient-to-r from-blue-500 to-green-500 text-white rounded-full shadow-xl font-semibold text-lg transform transition duration-300 hover:scale-105 hover:shadow-2xl"
-          (click)="Login()"
-        >
-          Login
-        </button>
-        <button
-          class="px-6 py-3 bg-gradient-to-r from-blue-500 to-green-500 text-white rounded-full shadow-xl font-semibold text-lg transform transition duration-300 hover:scale-105 hover:shadow-2xl"
-          (click)="Register()"
-        >
-          Register
-        </button>
-        <button
-          class="px-6 py-3 bg-gradient-to-r from-blue-500 to-green-500 text-white rounded-full shadow-xl font-semibold text-lg transform transition duration-300 hover:scale-105 hover:shadow-2xl"
-          (click)="View()"
-        >
-          Ver propiedades
-        </button>
-      </div>
-    </section>
-    <section
-      class="mt-12 flex flex-col sm:flex-row justify-center space-y-10 sm:space-y-0 sm:space-x-10"
+<ion-content
+  class="my-6 overflow-y-auto min-h-[calc(100vh-8rem)] bg-gray-50"
+>
+  <ion-toolbar class="bg-transparent">
+    <ion-title class="text-green-800 font-semibold text-4xl"
+      >RentMatch</ion-title
     >
-      <ion-card
-        class="w-full sm:w-60 rounded-lg shadow-lg p-3 transform transition duration-300 hover:scale-105 hover:shadow-2xl"
-      >
-        <ion-card-header>
-          <ion-card-title class="text-lg font-bold text-green-600"
-            >Fácil de Usar</ion-card-title
-          >
-        </ion-card-header>
-        <ion-card-content>
-          <p class="text-gray-600 text-sm">
-            Nuestra interfaz intuitiva te permite buscar y comparar propiedades
-            sin complicaciones.
-          </p>
-        </ion-card-content>
-      </ion-card>
+  </ion-toolbar>
 
-      <ion-card
-        class="w-full sm:w-60 rounded-lg shadow-lg p-3 transform transition duration-300 hover:scale-105 hover:shadow-2xl"
-      >
-        <ion-card-header>
-          <ion-card-title class="text-lg font-bold text-green-600"
-            >Propiedades Verificadas</ion-card-title
-          >
-        </ion-card-header>
-        <ion-card-content>
-          <p class="text-gray-600 text-sm">
-            Solo listamos propiedades verificadas para ofrecerte opciones
-            confiables y de calidad.
-          </p>
-        </ion-card-content>
-      </ion-card>
-    </section>
-  </main>
+  <ion-grid>
+    <ion-row>
+      <ion-col size="12" size-md="6">
+        <ion-card class="mb-6 shadow-lg h-full">
+          <ion-card-header>
+            <ion-card-title class="text-2xl font-bold text-purple-800"
+              >Encuentra el mejor alquiler para ti</ion-card-title
+            >
+          </ion-card-header>
+          <ion-card-content>
+            <p class="text-gray-700">
+              En RentMatch, te ayudamos a encontrar el alquiler perfecto
+              comparando miles de propiedades en un solo lugar. Ahorra tiempo y
+              dinero con nuestras herramientas de comparación fáciles de usar.
+            </p>
+            
+          </ion-card-content>
+          <ion-card class="mb-6 shadow-none mt-5">
+            <ion-card-title class="text-xl font-bold text-purple-800"
+              >Cómo Funciona</ion-card-title
+            >
+            <ion-card-content>
+              <ion-list>
+                <ion-item>
+                  <ion-label class="text-purple-800 font-semibold"
+                    >1. Busca: Introduce tus criterios de búsqueda (ubicación,
+                    precio, tipo de propiedad, etc.).</ion-label
+                  >
+                </ion-item>
+                <ion-item>
+                  <ion-label class="text-purple-800 font-semibold"
+                    >2. Compara: Revisa las opciones disponibles y compara
+                    características clave.</ion-label
+                  >
+                </ion-item>
+                <ion-item>
+                  <ion-label class="text-purple-800 font-semibold"
+                    >3. Decide: Elige la propiedad que mejor se adapte a tus
+                    necesidades y contacta al arrendador.</ion-label
+                  >
+                </ion-item>
+              </ion-list>
+            </ion-card-content>
+          </ion-card>
+        </ion-card>
+      </ion-col>
+
+      <ion-col size="12" size-md="6">
+
+          <ion-card class="mb-6 shadow-lg h-full">
+            <ion-card-header>
+              <ion-card-title class="text-2xl font-bold text-purple-800"
+                >¿Por qué elegir RentMatch?</ion-card-title
+              >
+            </ion-card-header>
+            <ion-card-content>
+              <ion-list class="mb-6">
+                <ion-item>
+                  <ion-icon
+                    name="speedometer-outline"
+                    slot="start"
+                    class="text-purple-600"
+                  ></ion-icon>
+                  <ion-label class="text-gray-700"
+                    >Comparación Rápida y Fácil</ion-label
+                  >
+                </ion-item>
+                <ion-item>
+                  <ion-icon
+                    name="albums-outline"
+                    slot="start"
+                    class="text-purple-600"
+                  ></ion-icon>
+                  <ion-label class="text-gray-700"
+                    >Amplia Base de Datos</ion-label
+                  >
+                </ion-item>
+                <ion-item>
+                  <ion-icon
+                    name="options-outline"
+                    slot="start"
+                    class="text-purple-600"
+                  ></ion-icon>
+                  <ion-label class="text-gray-700"
+                    >Filtros Personalizados</ion-label
+                  >
+                </ion-item>
+              </ion-list>
+            </ion-card-content>
+            <ion-card class="mb-6 shadow-none h-full">
+              <ion-card-header>
+                <ion-card-title class="text-2xl font-bold text-purple-800"
+                  >Testimonios</ion-card-title
+                >
+              </ion-card-header>
+              <ion-card-content>
+                <ion-item>
+                  <ion-label class="text-gray-700"
+                    >"RentMatch me ayudó a encontrar el apartamento perfecto en
+                    solo unos días. ¡Muy recomendable!" - Ana G.</ion-label
+                  >
+                </ion-item>
+                <ion-item>
+                  <ion-label class="text-gray-700"
+                    >"La herramienta de comparación es increíblemente útil y fácil
+                    de usar. Encontré un alquiler que se ajusta a mi presupuesto y
+                    necesidades." - Carlos M.</ion-label
+                  >
+                </ion-item>
+              </ion-card-content>
+            </ion-card>
+          </ion-card>
+      </ion-col>
+    </ion-row>
+
+    <ion-row>
+      <ion-col size="12" size-md="6">
+        <ion-card class="mb-6 shadow-lg">
+          <ion-card-header>
+            <ion-card-title class="text-2xl font-bold text-purple-800"
+              >Contáctanos</ion-card-title
+            >
+          </ion-card-header>
+          <ion-card-content>
+            <ion-list>
+              <ion-item>
+                <ion-icon
+                  name="mail-outline"
+                  slot="start"
+                  class="text-purple-600"
+                ></ion-icon>
+                <ion-label class="text-gray-700"
+                  >Email: contacto&#64;rentmatch.com</ion-label
+                >
+              </ion-item>
+              <ion-item>
+                <ion-icon
+                  name="call-outline"
+                  slot="start"
+                  class="text-purple-600"
+                ></ion-icon>
+                <ion-label class="text-gray-700"
+                  >Teléfono: +598 99 999 999</ion-label
+                >
+              </ion-item>
+              <ion-item>
+                <ion-icon
+                  name="location-outline"
+                  slot="start"
+                  class="text-purple-600"
+                ></ion-icon>
+                <ion-label class="text-gray-700"
+                  >Dirección: Artigas 1251, Salto, Departamento de Salto, Uruguay
+                </ion-label>
+              </ion-item>
+            </ion-list>
+          </ion-card-content>
+        </ion-card>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
+</ion-content>
