Login y register responsive too

--- a/frontend/src/app/pages/login/login.page.html
+++ b/frontend/src/app/pages/login/login.page.html
@@ -1,13 +1,15 @@
 <div
   class="relative h-full bg-[url('https://kato-lawyer-souzoku.jp/wp-content/uploads/fudousan_201.jpg')] bg-cover bg-center"
 >
-  <div class="flex min-h-full flex-col justify-center py-12 sm:px-6 lg:px-8">
-    <div class="mt-8 sm:mx-auto sm:w-full sm:max-w-md z-10 relative">
+  <div
+    class="flex min-h-full flex-col justify-center py-12 px-4 sm:px-6 lg:px-8"
+  >
+    <div class="mt-8 mx-auto w-full max-w-md z-10 relative ">
       <div
-        class="bg-white backdrop-blur-md border border-white py-8 px-4 shadow sm:rounded-lg sm:px-10"
+        class="bg-white backdrop-blur-md border border-white py-8 px-4 shadow sm:rounded-lg sm:px-10 rounded-lg"
       >
         <h2
-          class="mt-6 text-center text-3xl font-bold tracking-tight text-[#557665]"
+          class="mt-6 text-center text-2xl sm:text-3xl font-bold tracking-tight text-[#557665]"
         >
           Sign in to your account
         </h2>
@@ -26,7 +28,7 @@
                 type="email"
                 autocomplete="email"
                 required=""
-                class="block w-full appearance-none rounded-md border border-gray-300 bg-transparent px-3 py-2 placeholder-gray-400 text-black focus:border-indigo-500 focus:outline-none focus:ring-indigo-500 sm:text-sm"
+                class="block w-full appearance-none border border-gray-300 bg-transparent px-3 py-2 placeholder-gray-400 text-black focus:border-indigo-500 focus:outline-none focus:ring-indigo-500 sm:text-sm rounded-lg"
               />
             </div>
           </div>
@@ -45,7 +47,7 @@
                 type="password"
                 autocomplete="current-password"
                 required=""
-                class="block w-full appearance-none rounded-md border border-gray-300 bg-transparent px-3 py-2 placeholder-gray-400 text-black focus:border-indigo-500 focus:outline-none focus:ring-indigo-500 sm:text-sm"
+                class="block w-full appearance-none border border-gray-300 bg-transparent px-3 py-2 placeholder-gray-400 text-black focus:border-indigo-500 focus:outline-none focus:ring-indigo-500 sm:text-sm rounded-lg"
               />
             </div>
           </div>
@@ -79,7 +81,7 @@
           <div>
             <button
               type="submit"
-              class="group relative w-full flex justify-center py-2 px-4 border border-transparent text-sm font-medium rounded-md text-white bg-[#557665] hover:bg-[#386150] focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-[#508a72]"
+              class="group relative w-full flex justify-center py-2 px-4 border border-transparent text-sm font-medium text-white bg-[#557665] hover:bg-[#386150] focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-[#508a72] rounded-lg"
             >
               Sign in
             </button>
@@ -88,7 +90,7 @@
                 type="button"
                 mat-raised-button
                 (click)="signInWithGoogle()"
-                class="flex items-center justify-center rounded-md border border-transparent bg-white py-2 px-4 text-sm font-medium text-gray-900 shadow-sm hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-500 focus:ring-offset-2"
+                class="flex items-center justify-center border border-transparent bg-white py-2 px-4 text-sm font-medium text-gray-900 shadow-sm hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-500 focus:ring-offset-2 rounded-lg"
               >
                 <img
                   src="https://cdn1.iconfinder.com/data/icons/google-s-logo/150/Google_Icons-09-512.png"
