no me gusta ionic con lo de menu :/

--- a/frontend/src/app/components/filters/filters.component.html
+++ b/frontend/src/app/components/filters/filters.component.html
@@ -1,4 +1,4 @@
-<div class="w-full lg:w-64 p-6 bg-white shadow rounded-2xl space-y-8 overflow-y-auto h-screen border">
+<div class="w-full pt-24 p-6 bg-white shadow rounded-2xl space-y-8 overflow-y-auto h-screen border">
   <form [formGroup]="filtrosForm" class="space-y-9">
     
     <!-- Habitaciones -->
