--- a/frontend/src/app/components/filters/filters.component.html
+++ b/frontend/src/app/components/filters/filters.component.html
@@ -4,10 +4,22 @@
     <!-- Habitaciones -->
     <div >
       <h2 class="text-lg font-semibold text-gray-700 mb-4">Habitaciones</h2>
-      <ion-radio-group formControlName="habitaciones" class="grid grid-cols-5 gap-8">
-        <div *ngFor="let habitacion of habitaciones" class="flex flex-col items-center">
-          <ion-radio [value]="habitacion === '5+' ? '5+' : habitacion"></ion-radio>
-          <ion-label class="text-xs mt-1">{{ habitacion }}</ion-label>
+      <ion-radio-group 
+        formControlName="habitaciones" 
+        class="grid grid-cols-5 gap-8"
+      >
+        <div 
+          *ngFor="let habitacion of habitaciones" 
+          class="flex flex-col items-center"
+        >
+          <ion-radio 
+            [value]="habitacion === '5+' ? '5+' : habitacion" 
+            color="medium"
+          >
+          </ion-radio>
+          <ion-label 
+            class="text-xs mt-1">{{ habitacion }}
+          </ion-label>
         </div>
       </ion-radio-group>
     </div>
@@ -23,6 +35,7 @@
         [value]="{ lower: filtrosForm.value.minPrice, upper: filtrosForm.value.maxPrice }"
         (ionInput)="updatePriceRange($event)"
         class="w-full"
+        color="medium"
       ></ion-range>
       <p class="text-sm text-gray-500 mt-2">
         Precio: ${{ filtrosForm.value.minPrice }} - ${{ filtrosForm.value.maxPrice === 10000 ? 
@@ -33,22 +46,38 @@
     <!-- Departamento -->
     <div>
       <h2 class="text-lg font-semibold text-gray-700 mb-2">Departamento</h2>
-      <ion-select formControlName="departamento" class="w-full border border-gray-300 rounded-lg p-2 text-gray-700" 
-        interface="popover" placeholder="Seleccione un departamento" >
-        <ion-select-option *ngFor="let depto of departamentos" [value]="depto">{{depto}}</ion-select-option>
+      <ion-select 
+        formControlName="departamento" 
+        class="w-full border border-gray-300 rounded-lg p-2 text-gray-700" 
+        interface="popover" 
+        placeholder="Seleccione un departamento" 
+      >
+        <ion-select-option 
+          *ngFor="let depto of departamentos" 
+          [value]="depto">{{depto}}
+        </ion-select-option>
       </ion-select>
     </div>
     
     <!-- Barrio -->
     <div>
       <h2 class="text-lg font-semibold text-gray-700 mb-2">Barrio</h2>
-      <ion-input formControlName="barrio" class="w-full border border-gray-300 rounded-lg p-2 text-gray-700" 
-      type="text" placeholder="Ingrese el barrio" ></ion-input>
+      <ion-input 
+        formControlName="barrio" 
+        class="w-full border border-gray-300 rounded-lg p-2 text-gray-700" 
+        type="text" 
+        placeholder="Ingrese el barrio" 
+      >
+      </ion-input>
     </div>
 
     <!-- Restablecer -->
     <div class="pt-4">
-      <button type="button" (click)="resetFilters()" class="w-full bg-customGreen text-white rounded px-4 py-2">
+      <button 
+        type="button" 
+        (click)="resetFilters()" 
+        class="w-full bg-customGreen text-white rounded px-4 py-2"
+      >
         Restablecer Filtros
       </button>
     </div>
